デプロイ行くぞ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,7 @@ a:hover {
 .header-logo {
 	width: 170px;
 	height: 60px;
-	background-image: url(vixiv.png);
+	background-image: url(/images/vixiv.png);
 	background-size: 170px 60px;
 }
 .header-bottom {
@@ -194,7 +194,7 @@ a:hover {
 	height: 75px;
 	margin: 0 auto;
 	margin-bottom: 60px;
-	background-image: url(vixiv.png);
+	background-image: url(/images/vixiv.png);
 	background-size: 220px 75px;
 }
 .top-logo2 {
@@ -202,7 +202,7 @@ a:hover {
 	height: 75px;
 	margin: 0 auto;
 	margin-bottom: 20px;
-	background-image: url(vixiv.png);
+	background-image: url(/images/vixiv.png);
 	background-size: 220px 75px;
 }
 .top-box-content {
