--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -10,7 +10,7 @@
 				<div class="home-leftbar">
 					<div class="home-myicon-box">
 						<%= link_to(user_path(@user), class: "") do %>
-						<%= attachment_image_tag @user, :profile_image, :fill, 40,40, class: "home-myicon", fallback: "no_image.jpg" %>
+						<%= attachment_image_tag @user, :profile_image, :fill, 40,40, class: "home-myicon", fallback: "/images/no_image.jpg" %>
 						<% end %>
 						<%= link_to(user_path(@user), class: "") do %>
 						<div class="home-myname"><%= @user.name %></div>
@@ -33,7 +33,7 @@
 					<div class="home-leftbar-title">最近の自分の投稿</div>
 					<% @postm.each do |postm| %>
 						<%= link_to (post_path(postm)) do %>
-							<%= attachment_image_tag postm, :image, size: '75x75', class: "home-leftbar-posts", fallback: "no_image.jpg" %>
+							<%= attachment_image_tag postm, :image, size: '75x75', class: "home-leftbar-posts", fallback: "/images/no_image.jpg" %>
 						<% end %>
 					<% end %>
 				</div>
@@ -43,7 +43,7 @@
 							<% @postz.each do |postz| %>
 								<div class="home-new-post-content">
 									<%= link_to (post_path(postz)) do %>
-										<%= attachment_image_tag postz, :image, size: '150x150', class: "home-new-post-image", fallback: "no_image.jpg" %>
+										<%= attachment_image_tag postz, :image, size: '150x150', class: "home-new-post-image", fallback: "/images/no_image.jpg" %>
 									<% end %>
 									<div class="home-new-post-title">
 										<%= link_to (post_path(postz)) do %>
@@ -63,7 +63,7 @@
 							<% @posts.each do |post| %>
 								<div class="home-new-post-content">
 									<%= link_to (post_path(post)) do %>
-										<%= attachment_image_tag post, :image, size: '150x150', class: "home-new-post-image", fallback: "no_image.jpg" %>
+										<%= attachment_image_tag post, :image, size: '150x150', class: "home-new-post-image", fallback: "/images/no_image.jpg" %>
 									<% end %>
 									<div class="home-new-post-title">
 										<%= link_to (post_path(post)) do %>
@@ -87,7 +87,7 @@
 						<% else %>
 							<%= link_to(user_path(user), class: "") do %>
 								<div class="home-rightbar-icon-box">
-									<%= attachment_image_tag user, :profile_image, :fill, 50,50, class: "home-rightbar-icon", fallback: "no_image.jpg" %>
+									<%= attachment_image_tag user, :profile_image, :fill, 50,50, class: "home-rightbar-icon", fallback: "/images/no_image.jpg" %>
 									<b class="home-rightbar-name"><%= user.name %></b>
 								</div>
 							<% end %>
