--- a/app/views/users/user_posts_index.html.erb
+++ b/app/views/users/user_posts_index.html.erb
@@ -6,7 +6,7 @@
 		<div class="user-box">
 			<div class="profile-leftbar">
 				<div class="profile-card">
-					<%= attachment_image_tag @user, :profile_image, :fill, 80,80, class: "user-myicon", fallback: "no_image.jpg" %>
+					<%= attachment_image_tag @user, :profile_image, :fill, 80,80, class: "user-myicon", fallback: "/images/no_image.jpg" %>
 					<div class="user-myname"><%= @user.name %></div>
 				</div>
 				<div class="follow-button">
@@ -34,7 +34,7 @@
 				<% @posts.each do |post| %>
 					<div class="user-posts-content">
 						<%= link_to (post_path(post)) do %>
-							<%= attachment_image_tag post, :image, size: '150x150', class: "user-post-image", fallback: "no_image.jpg" %>
+							<%= attachment_image_tag post, :image, size: '150x150', class: "user-post-image", fallback: "/images/no_image.jpg" %>
 						<% end %>
 						<div class="user-post-title">
 							<b><%= post.post_title.truncate(10) %></b>
